Made MySQL not require root; removed maven from repository